--- a/BlazorApp1/Pages/_Host.cshtml
+++ b/BlazorApp1/Pages/_Host.cshtml
@@ -37,5 +37,7 @@
     
     <script src="~/webcam.js"></script>
     <script src="~/query-sender.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/&#64tensorflow/tfjs-tflite&#64;0.0.1-alpha.9/dist/tf-tflite.min.js"></script>
 </body>
 </html>
