mqtt 메시지 송수신 시간 측정

--- a/BlazorApp1/Pages/_Host.cshtml
+++ b/BlazorApp1/Pages/_Host.cshtml
@@ -36,7 +36,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.2/mqttws31.min.js" integrity="sha512-Gch3eVsdc+qexpSPzF9XxYV6aTfrBOSazZiPhNx2Xt+xIrPOTE6TCDXduwqMb8f+L8kDfjwdn8rabNHfaGMtrA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     
     <script src="~/webcam.js"></script>
-    <script src="~/query-sender.js"></script>
+    <script src="~/ai-hub.js"></script>
 
     <script src="https://cdn.jsdelivr.net/npm/&#64tensorflow/tfjs-tflite&#64;0.0.1-alpha.9/dist/tf-tflite.min.js"></script>
 </body>
