--- a/BlazorApp1/Shared/NavMenu.razor
+++ b/BlazorApp1/Shared/NavMenu.razor
@@ -15,12 +15,12 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="sender/query">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Query Sender
+            <NavLink class="nav-link" href="hubs/ai">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> AI Hub
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="event">
+            <NavLink class="nav-link" href="events">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Event List
             </NavLink>
         </div>
